[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-sla-watch"
version = "0.1.0"
description = "SLA/SLO monitor for agent latency and success rates"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
agent-sla-watch = "agent_sla_watch.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
